--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+html {
+    scroll-behavior: smooth;
+  }
 *{
     padding: 0;
     margin: 0;
@@ -16,6 +19,7 @@ header {
     width: 100%;
     position: fixed;
     font-size: large;
+    z-index: 5;
 }
 .item li{
     display: inline-block;
